rendering by button

--- a/src/index.html
+++ b/src/index.html
@@ -253,6 +253,26 @@
                 </div>
             </div>
         </section>
+        <section class="bestseller">
+            <div class="content bestseller__content">
+                <div class="container bestseller__container">
+                    <div class="bestseller__header">
+                        <h2 class="bestseller__title title">Хиты продаж</h2>
+                        <a href="" class="bestseller__header-link">Все товары ></a>
+                    </div>
+                    <div class="bestseller__button-panel">
+                        <button class="button-panel__btn active btn btn--gazebos">Беседки</button>
+                        <button class="button-panel__btn btn btn--baths">Бани</button>
+                        <button class="button-panel__btn btn btn--sites">Площадки</button>
+                        <button class="button-panel__btn btn btn--houses">Дома</button>
+                        <button class="button-panel__btn btn btn--pergolas">Перголы</button>
+                        <button class="button-panel__btn btn btn--brands">Бренды</button>
+                    </div>
+                    <div class="bestseller__products">
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="reviews">
             <div class="content reviews__content">
                 <h2 class="reviews__title title">Отзывы наших клиентов</h2>
@@ -676,5 +696,49 @@
             </div>
         </div>
     </footer>
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
+
+
+<!-- <div class="bestseller__product">
+    <div class="product__image-box">
+        <img src="./assets/images/product-image.png" alt="product" width="284" height="250">
+    </div>
+    <p class="product__vendor-code">Артикул: <span>0000001</span></p>
+    <h3 class="product__title">Название товара длинное 
+        в две строки наверное</h3>
+    <div class="product-size">
+        <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8.73161 0H4.5627C4.41444 0 4.2943 0.120169 4.2943 0.268395V0.984115C4.2943 1.13234 4.41444 1.25251 4.5627 1.25251H6.86179L1.25251 6.86182V4.56275C1.25251 4.41453 1.13234 4.29436 0.984111 4.29436H0.268394C0.120133 4.29436 0 4.41453 0 4.56275V8.7316C0 8.87983 0.120133 9 0.268394 9H4.4373C4.58556 9 4.7057 8.87983 4.7057 8.7316V8.01588C4.7057 7.86766 4.58556 7.74749 4.4373 7.74749H2.13821L7.7475 2.13818V4.43728C7.7475 4.58551 7.86763 4.70568 8.01589 4.70568H8.73161C8.87987 4.70568 9 4.58551 9 4.43728V0.268395C9 0.120169 8.87987 0 8.73161 0Z" fill="#FF7A1B"/>
+        </svg>
+        <p class="product-size__text text">Размеры:<span>12.3 x 14.6 x 4.3 м.</span></p>
+    </div>
+    <div class="product-square">
+        <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.5" y="0.5" width="8" height="8" rx="0.5" stroke="#FF7A1B"/>
+        </svg>
+        <p class="product-square__text text">Площадь:<span>33 м2</span></p>
+    </div>
+    <div class="product-capacity">
+        <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.99999 5.86879C6.46177 5.86879 7.64689 4.55503 7.64689 2.93441C7.64689 1.31376 7.2578 0 4.99999 0C2.74219 0 2.35302 1.31376 2.35302 2.93441C2.35302 4.55503 3.53814 5.86879 4.99999 5.86879Z" fill="#FF7A1B"/>
+            <path d="M0.000520507 10.3492C-0.000381037 10.3214 6.97346e-05 10.2504 0.000520507 10.3492V10.3492Z" fill="#FF7A1B"/>
+            <path d="M9.99924 10.4264C9.99973 10.2387 10.0007 10.3994 9.99924 10.4264V10.4264Z" fill="#FF7A1B"/>
+            <path d="M9.99361 10.2308C9.94459 7.4076 9.54062 6.60315 6.44934 6.09394C6.44934 6.09394 6.01419 6.60003 4.99996 6.60003C3.98572 6.60003 3.5505 6.09394 3.5505 6.09394C0.492951 6.5976 0.0644174 7.39011 0.00807089 10.139C0.00345048 10.3635 0.00130932 10.3753 0.000482909 10.3492C0.000670731 10.3981 0.000896033 10.4884 0.000896033 10.6459C0.000896033 10.6459 0.736856 12 4.99996 12C9.26298 12 9.99902 10.6459 9.99902 10.6459C9.99902 10.5447 9.99909 10.4743 9.99921 10.4265C9.99838 10.4426 9.99673 10.4113 9.99361 10.2308Z" fill="#FF7A1B"/>
+        </svg>
+        <p class="product-capacity__text text">Вместимость: <span>15 чел.</span></p>
+    </div>
+    <div class="product-warranty">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M5 0C2.24302 0 0 2.24295 0 4.99997C0 7.75699 2.24302 10 5 10C7.75698 10 10 7.75699 10 4.99997C10 2.24295 7.75704 0 5 0ZM7.87109 4.15544L4.72984 7.29666C4.59628 7.43023 4.41873 7.50374 4.22986 7.50374C4.04099 7.50374 3.86344 7.43023 3.72987 7.29666L2.12891 5.69571C1.99535 5.56215 1.92178 5.3846 1.92178 5.19573C1.92178 5.00681 1.99535 4.82926 2.12891 4.6957C2.26243 4.56213 2.43997 4.48857 2.6289 4.48857C2.81777 4.48857 2.99537 4.56213 3.12888 4.69575L4.22981 5.79662L6.87102 3.15542C7.00458 3.02186 7.18213 2.94834 7.371 2.94834C7.55987 2.94834 7.73742 3.02186 7.87098 3.15542C8.14678 3.43121 8.14678 3.87975 7.87109 4.15544Z" fill="#FF7A1B"/>
+        </svg>
+        <p class="produc-warranty__text text">Гарантия:<span>10 лет</span></p>
+    </div>
+    <div class="product-footer">
+        <div class="product-price">
+            <p class="product-price__text">5 023 900 ₽</p>
+        </div>
+        <button class="product-footer__btn btn">Купить</button>
+    </div>
+</div> -->
