create search.js ,changes

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
                     <div class="search-panel__search search">
                         <input type="text" placeholder="Поиск по каталогу.." class="search__input">
                         <button class="search__btn btn" type="submit">Найти</button>
+                        <p class="search-error">Для поиска заполните поле.</p>
                     </div>
                 </div>
                 <div class="middle-row__contacts contacts">
@@ -157,6 +158,13 @@
         </div>
     </header>
     <main class="main">
+        <section class="search-result">
+            <div class="content search-result__content">
+                <div class="search-result__container container">
+
+                </div>
+            </div>
+        </section>
         <section class="about">
             <div class="content main-slider__content">
                 <div class="container slider__container">
